Working through compile errors related to mavenization and updated library version.